# FLEX

./: README.md  pyproject.toml
archive/mfs/: __init__.py  gaussian.py  shoulder.py
examples/: cosine_regression.ipynb  fnn_two_input_regression.ipynb  fuzzy_ode.ipynb  two_input_regression.ipynb
src/flex/: __init__.py  fuzzy_variable.py  mfs.py
src/flex/fiss/: __init__.py  base_fis.py  mamdani.py  rule_base.py  rule_stats.py  rulebase.py  tsk.py
src/flex/mfs/: base_mf.py  functions.py  gaussian.py  shoulder.py  trapezoid.py  triangle.py
src/flex/train/: __init__.py  batch_iterators.py  train_func.py
src/flex/utils/: __init__.py  count_parameters.py  param_bank.py  types.py  unconstrained_parameters.py
src/flex/visualize/: __init__.py  plot_mfs.py
tests/: test_fiss.py  test_fuzzy_variable.py  test_mfs.py  test_rule_base.py
